0.8.8
- If you install the GUI with pip, you now need to include
  the `GUI` requirement: `pip install pycorrfit[GUI]`.
  The GUI depends on matplotlib and wxPython which is not
  required for scripting with the pycorrfit module.
- Bugfix: missing version string on SuSe linux (#101)
- Under the hood:
   - Python entry point script replaces "bin/" script
   - Windows build system hosted by appveyor.com
   - MacOS X build system hosted by travis-ci.org
   - New builds use wxPython3 (#85)
   - Unicode support without `reload(sys)`
0.8.7
- Removed unused fitting parameter d_eva from model 6022 and
  secured backwards compatibility.
- Improved support for ALV700X (#92)
- Bugfix: Corrected false display of Unicode characters on Windows
- Under the hood:
   - Code cleanup with pyflakes
   - Repo cleanup (#98)
0.8.6
- Bugfix: Opening .fcs files with only one AC curve works now
- Zip files with measurements may now contain subfolders
- Improved pt3-file support from
  https://github.com/dwaithe/FCS_point_correlator (#89)
0.8.5
- Fixed bug that made it impossible to load data (#88)
- Exceptions are now handled by wxPython
- Under the hood:
   - Pythonic repository structure
   - Relative imports
   - Windows build machine is now Windows 7
   - Removed strict dependency on matplotlib
0.8.4
- Support for PicoQuant data file format
  Many thanks to Dominic Waithe (@dwaithe)
- Improved compatibility with Zeiss .fcs file format
- PyCorrFit is now dependent on Cython
- The module 'openfile' is now available from within Python
- Installer for Windows
0.8.3
- New .pcfs (PyCorrFit Session) file format (#60)
- Additional fitting algorithms: Nelder-Mead, BFGS, Powell, Polak-Ribiere (#71)
- Improvements
   - Massive speed-up when working with large data sets (#77)
   - Plot export: legend position and displayed parameters (#54)
   - Average tool: traces may now start at time points != 0
   - Statistics tool: display on smaller screens